--- a/kafkaSparkLab/src/main/scala/org/microsoft/kafkaSpark/lab/application.properties
+++ b/kafkaSparkLab/src/main/scala/org/microsoft/kafkaSpark/lab/application.properties
@@ -1,3 +1,3 @@
-broker_servers=10.0.1.29:9092,10.0.1.30:9092,10.0.1.28:9092
-topic=json_topic
+broker_servers=bootstrap.kafkans.privatelink.nasalvacpool1.10e32bab26da4cc4a44152b318f824e6.eastus2.hdinsightaks-test.net:9092
+topic=alleeTopic
 starting_offset=earliest
